--- a/css/styles.css
+++ b/css/styles.css
@@ -373,7 +373,10 @@ body {
   transform: translate(0);
 }
 /*--------------section1------*/
-
+.advantages {
+  width: 100%;
+  margin: auto;
+}
 .advantages-icons {
   width: 264px;
   height: 112px;
@@ -386,8 +389,6 @@ body {
   display: none;
   justify-content: center;
   align-items: center;
-}
-.list-our {
 }
 
 .advantages-title {
@@ -409,8 +410,6 @@ body {
 /*--------------section2------*/
 .doing-style {
   padding-top: 0;
-}
-.list-doing {
   display: none;
 }
 .we-doing-title {
@@ -426,7 +425,9 @@ body {
 /*--------------section3------*/
 .list-team {
   display: flex;
-  gap: 24px;
+  flex-direction: column;
+  align-items: center;
+  gap: 72px;
 }
 .team-background {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
@@ -499,6 +500,10 @@ body {
 }
 
 /*--------------customers--------*/
+.section-customers {
+  width: 100%;
+  margin: auto;
+}
 .customers-heder {
   margin-bottom: 72px;
   font-weight: 700;
@@ -512,6 +517,7 @@ body {
 }
 .customers-list {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   gap: 24px;
@@ -559,7 +565,7 @@ body {
   color: var(--cloud-light-color);
 }
 .footer-text {
-  max-width: 264px;
+  max-width: 268px;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
@@ -569,9 +575,21 @@ body {
 }
 .footer-cont {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.footer-context {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 72px;
 }
 .footer-soc {
-  margin-left: 120px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 72px;
+  /* margin-left: 120px; */
 }
 .footer-soc-list {
   display: flex;
@@ -605,14 +623,24 @@ body {
   margin-bottom: 16px;
 }
 .subscribe-wrap {
-  margin-left: 80px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* mar
+
+Андрей Савченко, [28.04.2023 20:00]
+gin-left: 80px; */
+  width: 100%;
 }
 .fotter-form {
   display: flex;
+  flex-direction: column;
+  gap: 16px;
+  width: 100%;
 }
 .footer-input {
   outline: none;
-  width: 264px;
+  /* width: 264px; */
   height: 40px;
   color: var(--white-color);
   font-size: 12px;
@@ -633,6 +661,7 @@ body {
   padding-bottom: 8px;
 }
 .subscribe-btn {
+  width: 165px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -646,7 +675,7 @@ body {
   border-radius: 4px;
   background-color: var(--pressed-state-color);
   padding: 8px 24px 8px 24px;
-  margin-left: 24px;
+  margin: auto;
   color: var(--white-color);
   cursor: pointer;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
@@ -669,8 +698,8 @@ body {
   transition: opacity 250ms linear, visibility 250ms linear;
 }
 .modal {
-  width: 408px;
-  height: 576px;
+  width: 392px;
+  height: 584px;
   background-color: var(--background-modal);
   border-radius: 1px;
   position: absolute;
@@ -713,6 +742,7 @@ body {
 .backdrob.is-hidden.modal {
   transform: translate(-50%, -50%) scale(0);
 }
+
 .modal-title {
   font-size: 16px;
   font-weight: 500;
@@ -798,7 +828,7 @@ body {
   background-repeat: no-repeat;
 }
 .modal-textare {
-  width: 360px;
+  /* width: 360px; */
   height: 120px;
   padding-top: 8px;
   padding-left: 16px;
@@ -848,4 +878,131 @@ body {
 .modal-btn:hover,
 .modal-btn:focus {
   background-color: var(--primary-brand-color);
+}
+
+/* MENU--MOBILE */
+.mobile-btn-open {
+  display: none;
+}
+
+.mobile-btn-open {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  padding: 0;
+  border: 0;
+  background-color: #fff;
+}
+
+.mobile-conteiner-close {
+  margin-left: auto;
+  display: flex;
+  top: 10px;
+  right: 15px;
+}
+
+.mobile-btn-close {
+  display: block;
+  padding: 0;
+  border: 0;
+  background-color: #fff;
+}
+
+.mobile {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0%;
+  background-color: #fff;
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  transform: translateX(0%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
+
+  transform: translateX(-100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-conteiner {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 24px 24px 40px 40px;
+}
+
+.mobile-btn {
+  margin-left: auto;
+  width: 24px;
+  height: 24px;
+  border: 1px solid var(--main-title-color);
+  border-radius: 50%;
+  background-color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 32px;
+}
+
+.mobile-contacts {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.mobile-item {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 40px;
+
+  letter-spacing: 0.02em;
+  margin-bottom: 35px;
+}
+
+.current-mobile {
+  color: var(--primary-brand-color);
+}
+
+.mobile-link-tel {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 40px;
+
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: var(--pressed-state-color);
+}
+
+.mobile-link-mail {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 28px;
+  letter-spacing: 0.02em;
+
+  color: var(--text-color);
+}
+
+.mobile-adress-ithem {
+  margin-bottom: 48px;
+}
+
+.soc-list-mobile {
+  width: 353px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
