--- a/css/styles.css
+++ b/css/styles.css
@@ -908,7 +908,7 @@ gin-left: 80px; */
   background-color: #fff;
 }
 
-.mobile {
+/* .mobile {
   position: fixed;
   width: 100%;
   height: 100%;
@@ -922,19 +922,35 @@ gin-left: 80px; */
 
   transform: translateX(0%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+} */
+
+.mobile {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  padding: 32px;
+  background-color: #ffffff;
+  z-index: 999;
+  transform: translateX(100%);
+  transition: transform 250ms ease-in-out;
 }
 
-.mobile.is-hidden {
+.mobile.is-open {
+  transform: translateX(0);
+}
+/* .mobile.is-open {
   opacity: 0;
   pointer-events: none;
   visibility: hidden;
-
+  padding: 24px 24px 40px 40px;
   transform: translateX(-100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+} */
 
-.mobile-conteiner {
-  width: 100%;
+.mobile-conteiner.is-open {
+  width: 91%;
   height: 100%;
   display: flex;
   flex-direction: column;
