--- a/css/adaptive.css
+++ b/css/adaptive.css
@@ -2,9 +2,21 @@
   .header-container {
     width: 428px;
   }
-  .hero-title {
-    width: 428px;
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .hero {
+      background-image: linear-gradient(
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url(../images/hero-mob-x2.jpg);
+    }
   }
+  .hero-title {
+    width: 320px;
+  }
+
   .advantages {
     width: 428px;
   }
@@ -13,6 +25,15 @@
   }
   .fotter-form {
     width: 428px;
+  }
+  .soc-list-mobile {
+    gap: 56px;
+  }
+  .text-accept {
+    width: 233px;
+  }
+  .input-text-accept {
+    align-items: flex-end;
   }
 }
 
@@ -23,6 +44,7 @@
   .header-address-list {
     display: block;
   }
+
   .haeder-list-contacts {
     display: flex;
     align-items: center;
@@ -34,8 +56,30 @@
     gap: 40px;
     margin-left: 120px;
   }
+  .header-contacts {
+    font-size: 12px;
+    line-height: 14px;
+  }
   .nav-btn {
     display: none;
+  }
+  .hero {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/hero-lab.jpg);
+  }
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .hero {
+      background-image: linear-gradient(
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url(../images/hero-lab-x2.jpg);
+    }
   }
   .hero-title {
     width: 768px;
@@ -46,6 +90,9 @@
   }
   .advantages {
     width: 768px;
+  }
+  .advantages-list {
+    margin-bottom: 0px;
   }
   .advantages-title {
     font-size: 36px;
@@ -111,17 +158,40 @@
   .footer-context {
     align-items: start;
   }
+  .text-accept {
+    width: 233px;
+  }
+  .input-text-accept {
+    align-items: flex-end;
+  }
 }
 
 @media (min-width: 1158px) {
   .hero {
     padding-top: 188px;
     padding-bottom: 188px;
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/hero-desk.jpg);
+  }
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .hero {
+      background-image: linear-gradient(
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url(../images/hero-desk-x2.jpg);
+    }
   }
   .section {
     padding-top: 120px;
     padding-bottom: 120px;
   }
+
   .nav-btn {
     display: none;
   }
@@ -142,11 +212,17 @@
     margin-left: auto;
     display: block;
   }
+
   .header-nav {
     width: 782px;
   }
   .icon-center {
     display: flex;
+  }
+  .hero-title {
+    width: 496px;
+    font-size: 56px;
+    line-height: 60px;
   }
   .list-our {
     display: flex;
@@ -154,6 +230,9 @@
   }
   .advantages {
     width: 1158px;
+  }
+  .advantages-list {
+    margin-bottom: 0px;
   }
   .advantages-title {
     font-size: 20px;
@@ -215,5 +294,11 @@
   }
   .footer-input {
     width: 264px;
+  }
+  .text-accept {
+    width: 233px;
+  }
+  .input-text-accept {
+    align-items: flex-end;
   }
 }
