--- a/css/styles.css
+++ b/css/styles.css
@@ -160,6 +160,7 @@ body {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
+  font-style: normal;
   letter-spacing: 0.02em;
   color: var(--text-color);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -178,7 +179,8 @@ body {
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(../images/hero-bg.jpg);
+    url(../images/hero-mob.jpg);
+
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -377,6 +379,9 @@ body {
   width: 100%;
   margin: auto;
 }
+.advantages-list {
+  margin-bottom: 72px;
+}
 .advantages-icons {
   width: 264px;
   height: 112px;
@@ -404,7 +409,6 @@ body {
   font-size: 16px;
   line-height: 24px;
   letter-spacing: 0.02em;
-  margin-bottom: 72px;
   color: var(--text-color);
 }
 /*--------------section2------*/
@@ -520,7 +524,7 @@ body {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  gap: 24px;
+  gap: 72px 24px;
 }
 .customers-item {
   width: 168px;
@@ -698,8 +702,8 @@ gin-left: 80px; */
   transition: opacity 250ms linear, visibility 250ms linear;
 }
 .modal {
-  width: 392px;
-  height: 584px;
+  /* width: 392px;
+  height: 584px; */
   background-color: var(--background-modal);
   border-radius: 1px;
   position: absolute;
@@ -708,6 +712,11 @@ gin-left: 80px; */
   transform: translate(-50%, -50%) scale(1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding: 72px 24px 24px;
+  width: 95%;
+  max-width: 392px;
+  height: 95%;
+  max-height: 586px;
+  overflow: scroll;
 }
 
 .modal-close {
@@ -776,10 +785,13 @@ gin-left: 80px; */
   margin-bottom: 8px;
 }
 .modal-field-accept {
-  width: 360px;
-  display: flex;
-  align-items: center;
+  /* width: 360px; */
+  /* display: flex;
+  align-items: center; */
   margin-bottom: 16px;
+}
+.text-accept {
+  width: 129px;
 }
 
 .input-text {
@@ -794,7 +806,7 @@ gin-left: 80px; */
   display: flex;
   color: var(--input-text);
   font-size: 12px;
-  align-items: flex-end;
+  align-items: center;
   letter-spacing: 0.04em;
 }
 .input-text-accept::before {
@@ -928,30 +940,23 @@ gin-left: 80px; */
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   padding: 32px;
   background-color: #ffffff;
   z-index: 999;
   transform: translateX(100%);
   transition: transform 250ms ease-in-out;
+  display: flex;
+  flex-direction: column;
 }
 
 .mobile.is-open {
   transform: translateX(0);
 }
-/* .mobile.is-open {
-  opacity: 0;
-  pointer-events: none;
-  visibility: hidden;
-  padding: 24px 24px 40px 40px;
-  transform: translateX(-100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-} */
-
 .mobile-conteiner.is-open {
-  width: 91%;
-  height: 100%;
+  width: 100%;
+  /* height: 100vh; */
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -975,7 +980,6 @@ gin-left: 80px; */
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
 }
 
 .mobile-item {
@@ -983,12 +987,16 @@ gin-left: 80px; */
   font-weight: 700;
   font-size: 36px;
   line-height: 40px;
-
   letter-spacing: 0.02em;
   margin-bottom: 35px;
+  color: var(--main-title-color);
 }
 
-.current-mobile {
+.link-mob:visited {
+  color: var(--main-title-color);
+}
+.link-mob:hover,
+.link-mob:focus {
   color: var(--primary-brand-color);
 }
 
@@ -997,7 +1005,6 @@ gin-left: 80px; */
   font-weight: 700;
   font-size: 36px;
   line-height: 40px;
-
   letter-spacing: 0.02em;
   text-transform: capitalize;
   color: var(--pressed-state-color);
@@ -1011,14 +1018,15 @@ gin-left: 80px; */
 
   color: var(--text-color);
 }
-
+.mobile-adress {
+  margin-top: auto;
+}
 .mobile-adress-ithem {
   margin-bottom: 48px;
 }
 
 .soc-list-mobile {
-  width: 353px;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  gap: 35px;
 }
